# play-sound-now

./: .gitignore  Cargo.toml  MODULE.bazel  README.md  renovate.json
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
cli/: BUILD.bazel  main.rs
synth/: BUILD.bazel  lib.rs  synth.rs  types.rs
ui/: BUILD.bazel  README.md  app.rs  oldmain.js  package.json  pnpm-lock.yaml
ui/src/: App.vue  BUILD.bazel
ui/src/components/: NotFound.vue  Player.vue
ui/src/components/__tests__/: HelloWorld.spec.js
ui/src/router/: index.js
ui/src/views/: PlayerView.vue
